--- a/ecommerce/stores/templates/store_signup_otp.html
+++ b/ecommerce/stores/templates/store_signup_otp.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Vendor Sign-up OTP</title>
+    <title>Store Sign-up OTP</title>
   </head>
   <body>
-    <h2>Dear {{ vendor_name }},</h2>
+    <h2>Dear {{ owner_name }},</h2>
     <p>
-      Thank you for signing up for our multivendor ecommerce platform. To
+      Thank you for signing up for our multiStore ecommerce platform. To
       complete your registration, please enter the following OTP:
     </p>
+    <h3>{{ store_id }}</h3>
     <h3>{{ otp }}</h3>
     <p>Please enter the OTP in the registration form to verify your account.</p>
     <p>If you did not sign up for our platform, please ignore this email.</p>
     <br />
     <p>Best regards,</p>
-    <p>The Multivendor Ecommerce Team</p>
+    <p>The MultiStore Ecommerce Team</p>
   </body>
 </html>
